[package]
authors.workspace = true
description = "Types for the Ethereum Beacon Node API"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "alloy-rpc-types-beacon"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# ethereum
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["serde"] }

# ssz
ethereum_ssz = { workspace = true, optional = true }
ethereum_ssz_derive = { workspace = true, optional = true }

serde.workspace = true
serde_with.workspace = true

thiserror.workspace = true

irys-primitives = { path = "../../../../crates/primitives" }


[dev-dependencies]
serde_json.workspace = true
similar-asserts.workspace = true

[features]
ssz = [
    "alloy-rpc-types-engine/ssz",
    "dep:ethereum_ssz",
    "dep:ethereum_ssz_derive",
]
